Fri Jun 18 19:58:55 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/DLL_Manager.cpp:
        * ace/Logging_Strategy.cpp: Moved the _get_dll_unload_policy()
          function from DLL_Manager.cpp to Logging_Strategy.cpp where it's
          more clear why it's there.

Fri Jun 18 11:13:40 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Time_Value.inl: Fixed fuzz errors.

Thu Jun 17 21:59:34 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Time_Value.{h inl}: Added explicit set_ and get_ methods for
          ACE_UINT64 msec values. Also marked the existing "getter"
          msec(ACE_UINT64&) methods deprecated because they look like
          setter methods and are confusing. Users should change to get_msec().
          Resolves Bugzilla #3336.

        * NEWS: Described the new methods and rationale.

        * tests/Time_Value_Test.cpp: Added test cases for the new
          set_msec() and get_msec() methods.

Thu Jun 17 19:47:58 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/DLL_Manager.cpp: Add _get_dll_unload_policy() function that
          returns ACE_DLL_UNLOAD_POLICY_LAZY; this prevents the DLL_Manager
          from running down ACE framework components just from unloading
          a service contained in ACE itself.
          Proposed fix for Bugzilla #3856.

Thu Jun 17 19:01:32 UTC 2010  Steve Huston  <shuston@riverace.com>

        * tests/Service_Config_Test.cpp: Added a new test case,
          testUnloadingACELoggingStrategy. It loads then unloads the
          ACE logging strategy. This causes ACE to run down itself,
          smashing singletons in the process. This test case goes with
          Bugzilla #3856.

Wed Jun 16 21:48:49 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb:

          Added various assignments that are specific to -type cdt6.  Since
          this Eclipse CDT support is not yet available in MPC, these will